--- a/index gallery.html
+++ b/index gallery.html
@@ -1,12 +1,13 @@
-<html><head><META http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body>
+<html>
+	<head>
 
-
-	
-	
-	
-	
-	
-	
+		<META http-equiv="Content-Type" content="text/html; charset=utf-8">
+		
+			<script src="gallery.js"></script>
+ 
+	 </head>
+		
+		<body>
 
 <div>
 	
