--- a/index gallery.html
+++ b/index gallery.html
@@ -3,9 +3,7 @@
 
 		<META http-equiv="Content-Type" content="text/html; charset=utf-8">
 		
-			<script src="gallery.js"></script>
- 
-	 </head>
+	</head>
 		
 		<body>
 
@@ -16,9 +14,6 @@
 		<div>
 			
 			<img src="http://images/photo1.jpg">
-			
-			
-			
 			
 			<div>
 				This is my first caption.
@@ -46,6 +41,7 @@
 			<div>Caption 5</div>
 		</div> 
 	</div>
+	
 	<div>
 		
 		<button type="button">Previous</button>
@@ -53,5 +49,13 @@
 		<button type="button">Next</button>
 	</div> 
 
-</div>
-</body></html>
+		</div>
+			
+	</body>
+		
+	<footer>
+		
+			<script src="gallery.js"></script>
+	</footer>
+		
+</html>
