--- a/index gallery.html
+++ b/index gallery.html
@@ -7,16 +7,20 @@
 		
 		<body>
 
+		<p1> The photos in this slideshow are inspired by a photographer based in San Francisco named Jim Jocoy. 
+		     Jocoy got his start in the late 1970s and early 1980s taking photos of the punk scene in San Francisco. 
+		     He encapsulates the era with dark and grainy photos that resemble "found footage." 
+	 	     This is my take on Jocoy's legacy. Enjoy. </p1>
 <div>
 	
 	<div>
 		
 		<div>
 			
-			<img src="http://images/photo1.jpg">
+			<img src="hhttps://howarduona.wixsite.com/jessovisuals/single-post/2017/10/04/Inspired-by-Jim-Jocoy">
 			
 			<div>
-				This is my first caption.
+				A photo of Fallon & Carsen.
 			</div>
 		</div>
 		
