--- a/index gallery.html
+++ b/index gallery.html
@@ -7,10 +7,10 @@
 		
 		<body>
 
-		<p1> The photos in this slideshow are inspired by a photographer based in San Francisco named Jim Jocoy. 
+		<p> The photos in this slideshow are inspired by a photographer based in San Francisco named Jim Jocoy. 
 		     Jocoy got his start in the late 1970s and early 1980s taking photos of the punk scene in San Francisco. 
 		     He encapsulates the era with dark and grainy photos that resemble "found footage." 
-	 	     This is my take on Jocoy's legacy. Enjoy. </p1>
+	 	     This is my take on Jocoy's legacy. Enjoy. </p>
 <div>
 	
 	<div>
