--- a/index gallery.html
+++ b/index gallery.html
@@ -17,7 +17,7 @@
 		
 		<div>
 			
-			<img src="hhttps://howarduona.wixsite.com/jessovisuals/single-post/2017/10/04/Inspired-by-Jim-Jocoy">
+			<img src="https://static.wixstatic.com/media/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.webp">
 			
 			<div>
 				A photo of Fallon & Carsen.
@@ -25,24 +25,24 @@
 		</div>
 		
 		<div>
-			<img src="http://images/photo2.jpg">
-			<div>This is a picture of cats. Because the internet.</div>
+			<img src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp">
+			<div>Night Crawlers.</div>
 		</div>
 		
 		<div>
-			<img src="http://images/photo3.jpg">
+			<img src="https://static.wixstatic.com/media/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.webp">
 			<div>Caption 3</div>
 		</div>
 		
 		<div>
 			<img src="http://images/photo4.jpg">
 
-			<div>Caption 4</div>
+			<div>A photo of Carsen.</div>
 		</div>
 		
 		<div>
-			<img src="http://images/photo5.jpg">
-			<div>Caption 5</div>
+			<img src="https://static.wixstatic.com/media/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.webp">
+			<div>Angry Asian Girls.</div>
 		</div> 
 	</div>
 	
