--- a/index gallery.html
+++ b/index gallery.html
@@ -12,48 +12,49 @@
 		     He encapsulates the era with dark and grainy photos that resemble "found footage." 
 	 	     This is my take on Jocoy's legacy. Enjoy. </p>
 <div>
-	
-	<div>
-		
-		<div>
-			
-			<img src="https://static.wixstatic.com/media/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.webp">
-			
-			<div>
-				A photo of Fallon & Carsen.
-			</div>
-		</div>
-		
-		<div>
-			<img src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp">
-			<div>Night Crawlers.</div>
-		</div>
-		
-		<div>
-			<img src="https://static.wixstatic.com/media/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.webp">
-			<div>Caption 3</div>
-		</div>
-		
-		<div>
-			<img src="http://images/photo4.jpg">
+	<!-- Slideshow container -->
+<div class="slideshow-container">
 
-			<div>A photo of Carsen.</div>
-		</div>
-		
-		<div>
-			<img src="https://static.wixstatic.com/media/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.webp">
-			<div>Angry Asian Girls.</div>
-		</div> 
-	</div>
-	
-	<div>
-		
-		<button type="button">Previous</button>
-		
-		<button type="button">Next</button>
-	</div> 
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="https://static.wixstatic.com/media/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <div class="text"> A photo of Fallon & Carsen.</div>
+  </div>
 
-		</div>
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <div class="text">Night Crawlers</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="https://static.wixstatic.com/media/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <div class="text">A photo of Carsen.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 4</div>
+    <img src="https://static.wixstatic.com/media/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <div class="text">Angry Asian Girls.</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+	
+	
+		
 			
 	</body>
 		
