--- a/index gallery.html
+++ b/index gallery.html
@@ -3,6 +3,8 @@
 
 		<META http-equiv="Content-Type" content="text/html; charset=utf-8">
 		
+		<<link rel="stylesheet" href="style.css">
+		
 	</head>
 		
 		<body>
