--- a/index gallery.html
+++ b/index gallery.html
@@ -7,9 +7,8 @@
 		
 	</head>
 	
-	<title>
-		Jess O Visuals
-	</title>
+	<title> Jess O Visuals </title>
+		
 		<body>
 
 		<p> The photos in this slideshow are inspired by a photographer based in San Francisco named Jim Jocoy. 
