--- a/index gallery.html
+++ b/index gallery.html
@@ -3,13 +3,15 @@
 
 		<META http-equiv="Content-Type" content="text/html; charset=utf-8">
 		
-		<<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css">
 		
-	</head>
+		<title> Jess O Visuals </title>
 	
-	<title> Jess O Visuals </title>
+	</head>
 		
 		<body>
+		
+			<h1> Welcome to Jess O Visuals. </h1>
 
 		<p> The photos in this slideshow are inspired by a photographer based in San Francisco named Jim Jocoy. 
 		     Jocoy got his start in the late 1970s and early 1980s taking photos of the punk scene in San Francisco. 
@@ -44,28 +46,26 @@
     <div class="text">Angry Asian Girls.</div>
   </div>
 
-  <!-- Next and previous buttons -->
+  
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
 
-<!-- The dots/circles -->
+
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
   <span class="dot" onclick="currentSlide(4)"></span> 	
 </div>
-	
-	
-		
-			
+				
 	</body>
 		
 	<footer>
 		
 			<script src="gallery.js"></script>
+		
 	</footer>
 		
 </html>
