--- a/index gallery.html
+++ b/index gallery.html
@@ -11,7 +11,7 @@
 		
 		<body>
 		
-			<h1> Welcome to Jess O Visuals. </h1>
+			<h1> Welcome to Jess O Visuals! </h1>
 
 		<p> The photos in this slideshow are inspired by a photographer based in San Francisco named Jim Jocoy. 
 		     Jocoy got his start in the late 1970s and early 1980s taking photos of the punk scene in San Francisco. 
@@ -24,25 +24,25 @@
   
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="https://static.wixstatic.com/media/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <img src="https://static.wixstatic.com/media/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.webp" style="width:60%" align="middle">
     <div class="text"> A photo of Fallon & Carsen.</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
-    <img src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <img src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp" style="width:60%" align="middle">
     <div class="text">Night Crawlers</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <img src="https://static.wixstatic.com/media/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <img src="https://static.wixstatic.com/media/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.webp" style="width:60%" align="middle">
     <div class="text">A photo of Carsen.</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
-    <img src="https://static.wixstatic.com/media/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.webp" style="width:100%">
+    <img src="https://static.wixstatic.com/media/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.webp" style="width:60%" align="middle">
     <div class="text">Angry Asian Girls.</div>
   </div>
 
