--- a/index gallery.html
+++ b/index gallery.html
@@ -1,3 +1,23 @@
+<html>
+	<head>
+
+		
+		
+		<link rel="stylesheet" href="style.css">
+		
+		<title> Jess O Visuals </title>
+
+  </head>
+  
+  <body>
+  
+    <h1> Welcome to Jess O Visuals!</h1>
+  
+  	<p> The photos in this slideshow are inspired by a photographer based in San Francisco named Jim Jocoy. 
+		     Jocoy got his start in the late 1970s and early 1980s taking photos of the punk scene in San Francisco. 
+		     He encapsulates the era with dark and grainy photos that resemble "found footage." 
+	 	     This is my take on Jocoy's legacy. Enjoy. </p>
+
 <!-- This is where my photos will live. Each photo has an image source, a caption, and a fraction to denote where it comes in the slideshow -->
 
 <div class="slideshow-container">
@@ -33,3 +53,14 @@
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
+
+    		
+	<!-- I saw on a Youtube video that adding JavaScript to the footer rather than the header will make a page load 	faster -->
+	
+	<footer>
+		
+			<script src="gallery.js"></script>
+		
+	</footer>
+
+</body>
