--- a/index gallery.html
+++ b/index gallery.html
@@ -24,26 +24,26 @@
 
   <!-- by adding classes to div, and then using CSS, my order numbers and captions can live on the actual photo -->
   
-    <div class="slideshow">
+    <div class="photos">
     <div>1 / 4</div>
     <img src="https://static.wixstatic.com/media/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_fc1c7885f08f4385ae5bcbd1649328b6~mv2_d_3024_4032_s_4_2.webp"
  	style="width:70%">
     <div>Angry Asian Girls.</div>
   </div>
 
-  <div class="slideshow">
+  <div class="photos">
     <div>2 / 4</div>
     <img src="https://static.wixstatic.com/media/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_811e76b4e0f84fe399a94fcb45b13101~mv2_d_3024_4032_s_4_2.webp" style="width:70%">
     <div>A photo of Carsen.</div>
   </div>
 
-  <div class="slideshow">
+  <div class="photos">
     <div>3 / 4</div>
     <img 	src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp" style="width:70%">
     <div>Night Crawlers</div>
   </div>
 
-<div class="slideshow">
+<div class="photos">
     <div>4 / 4</div>
     <img src="https://static.wixstatic.com/media/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_73cd3b6d25e44b09982c6311431145e5~mv2_d_3024_4032_s_4_2.webp"
  style="width:70%">
