--- a/index gallery.html
+++ b/index gallery.html
@@ -20,7 +20,7 @@
 
 <!-- This is where my photos will live. Each photo has an image source, a caption, and a fraction to denote where it comes in the slideshow -->
 
-<div class="slideshow-main">
+<div class="slideshow">
 
   <!-- by adding classes to div, and then using CSS, my order numbers and captions can live on the actual photo -->
   
@@ -39,7 +39,7 @@
 
   <div class="photos">
     <div class="order">3 / 4</div>
-    <img 	src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp" style="width:70%">
+    <img src="https://static.wixstatic.com/media/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_660,h_880,al_c,q_90,usm_0.66_1.00_0.01/71ed3e_c9e1a18ab2df4abcb4019bf1fc249470~mv2_d_3024_4032_s_4_2.webp" style="width:70%">
     <div class="caption">Night Crawlers</div>
   </div>
 
