--- a/index gallery.html
+++ b/index gallery.html
@@ -22,7 +22,7 @@
 
 <div class="slideshow">
 
-  <!-- by adding classes to div, and then using CSS, my order numbers and captions can live on the actual photo -->
+  <!-- by adding classes to div, and then using CSS, I can control where my order numbers and captions appear near the photo -->
   
     <div class="photos">
     <div class="order">1 / 4</div>
