--- a/index-gallery.html
+++ b/index-gallery.html
@@ -3,6 +3,8 @@
 
 		<link rel="stylesheet" href="style.css">
 		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		
 		<title> Jess O Visuals </title>
 
   </head>
